Fix #1496: Error showing Job with LongRangeFilterParameter without lower or upper limit

--- a/roda-ui/roda-wui/src/main/resources/config/i18n/client/ClientMessages.properties
+++ b/roda-ui/roda-wui/src/main/resources/config/i18n/client/ClientMessages.properties
@@ -612,6 +612,8 @@ searchPreFilterBasicSearchFilterParameter:<span class="search-prefilter-field">{
 searchPreFilterNotSimpleFilterParameter:<span class="search-prefilter-field">{0}</span> is not <span class="search-prefilter-value">{1}</span>
 searchPreFilterEmptyKeyFilterParameter:No <span class="search-prefilter-field">{0}</span>
 searchPreFilterLongRangeFilterParameter:<span class="search-prefilter-field">{0}</span> is between <span class="search-prefilter-value">{1}</span> and <span class="search-prefilter-value">{2}</span>
+searchPreFilterLongRangeFilterParameterGreaterThan:<span class="search-prefilter-field">{0}</span> is greater than <span class="search-prefilter-value">{1}</span>
+searchPreFilterLongRangeFilterParameterSmallerThan:<span class="search-prefilter-field">{0}</span> is smaller than <span class="search-prefilter-value">{1}</span>
 searchPreFilterOneOfManyFilterParameterWithSize:<span class="search-prefilter-field">{0}</span> is one of <span class="search-prefilter-value">one of {1} possible values</span>
 searchPreFilterOneOfManyFilterParameterSingle:<span class="search-prefilter-field">{0}</span> is <span class="search-prefilter-value">{1}</span>
 searchPreFilterOneOfManyFilterParameterWithList:<span class="search-prefilter-field">{0}</span> is one of <span class="search-prefilter-value">{1,list}</span>
