--- a/roda-ui/roda-wui/src/main/resources/config/i18n/client/ClientMessages_pt_PT.properties
+++ b/roda-ui/roda-wui/src/main/resources/config/i18n/client/ClientMessages_pt_PT.properties
@@ -589,6 +589,8 @@ searchPreFilterBasicSearchFilterParameter:<span class="search-prefilter-field">{
 searchPreFilterNotSimpleFilterParameter:<span class="search-prefilter-field">{0}</span> não é <span class="search-prefilter-value">{1}</span>
 searchPreFilterEmptyKeyFilterParameter: Sem <span class="search-prefilter-field">{0}</span>
 searchPreFilterLongRangeFilterParameter:<span class="search-prefilter-field">{0}</span> está entre <span class="search-prefilter-value">{1}</span> e <span class="search-prefilter-value">{2}</span>
+searchPreFilterLongRangeFilterParameterGreaterThan:<span class="search-prefilter-field">{0}</span> é maior que <span class="search-prefilter-value">{1}</span>
+searchPreFilterLongRangeFilterParameterSmallerThan:<span class="search-prefilter-field">{0}</span> é menor que <span class="search-prefilter-value">{1}</span>
 searchPreFilterOneOfManyFilterParameterWithSize:<span class="search-prefilter-field">{0}</span> pode ser <span class="search-prefilter-value">um de {1} possíveis valores</span>
 searchPreFilterOneOfManyFilterParameterSingle:<span class="search-prefilter-field">{0}</span> é <span class="search-prefilter-value">{1}</span>
 searchPreFilterOneOfManyFilterParameterWithList:<span class="search-prefilter-field">{0}</span> pode ser <span class="search-prefilter-value">{1,list}</span>
